syntax = "proto3";

package warp.multi_agent.v1;

option go_package = "github.com/warp/warp-proto-apis/multi_agent/v1";

message FileContentLineRange {
    uint32 start = 1;
    uint32 end = 2;
}

message FileContent {
    string file_path = 1;
    string content = 2;
    FileContentLineRange line_range = 3;
}
